--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BaseballRecruitment</string>
+    <string name="app_name">BARD Card</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
